tdarr/k8s/tdarr-traefik-tweaks.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: tdarr-ui-internal
  namespace: tdarr
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`tdarr-internal.pindaroli.org`)
      services:
        - name: tdarr-service
          port: 8267
          serversTransport: tdarr-transport
  tls:
    secretName: pindaroli-wildcard-tls
