tdarr/k8s/tdarr.yaml
apiVersion: v1
kind: Service
metadata:
  name: tdarr-service
  namespace: tdarr
  annotations:
    metallb.universe.tf/address-pool: tdarr-api-pool
spec:
  type: LoadBalancer
  externalTrafficPolicy: Cluster
  loadBalancerIP: 10.10.20.61
  selector:
    app: tdarr-server
  ports:
    - name: webui
      port: 8267
      targetPort: 8267
    - name: api
      port: 8266
      targetPort: 8266
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: tdarr-ui-external
  namespace: tdarr
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`tdarr.pindaroli.org`)
      kind: Rule
      middlewares:
        - name: oauth2-auth
          namespace: traefik
      services:
        - name: tdarr-service
          port: 8267
  tls:
    secretName: pindaroli-wildcard-tls
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: tdarr-ui-internal
  namespace: tdarr
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`tdarr-internal.pindaroli.org`)
      kind: Rule
      middlewares:
        - name: oauth2-auth
          namespace: traefik
      services:
        - name: tdarr-service
          port: 8267
  tls:
    secretName: pindaroli-wildcard-tls
